* 2012-01-08 - alexander.quast@open-xchange.com

 - Fix for bug 24411: Unresolvable (resource) conflicts

* 2012-12-17 - marcus.klein@open-xchange.com

 - Fix for bug 24222: Renamed package to open-xchange-appsuite.